--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "private": true,
   "name": "hello-tab",
   "dependencies": {
-    "coffee-script": "^1.10.0",
-    "nodemon": "1.7.0"
+    "babel": "5.8.23",
+    "express": "4.13.3",
+    "jade": "1.11.0",
+    "node-jsx": "0.13.3",
+    "nodemon": "1.7.0",
+    "react": "0.13.3",
+    "react-router": "^1.0.0-rc1"
   },
   "scripts": {
-    "start": "(coffee --compile --output dist --watch src &) && nodemon ./dist/server.js"
+    "babel-node": "babel-node --stage 0",
+    "start": "nodemon --exec npm run babel-node -- server.js"
   }
 }
