--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node-jsx": "0.13.3",
     "nodemon": "1.7.0",
     "react": "0.13.3",
-    "react-router": "^1.0.0-rc1"
+    "react-router-component": "^0.26.1"
   },
   "scripts": {
     "babel-node": "babel-node --stage 0",
