--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "name": "hello-tab",
   "dependencies": {
     "babel": "5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
     "connect-assets": "^5.0.1",
     "express": "4.13.3",
     "jade": "1.11.0",
     "node-jsx": "0.13.3",
+    "node-sass": "^3.3.3",
     "node-sass-middleware": "^0.9.6",
     "nodemon": "1.7.0",
     "react": "0.13.3",
@@ -16,5 +19,10 @@
   "scripts": {
     "babel-node": "babel-node --stage 0",
     "start": "nodemon --exec npm run babel-node -- server.js"
+  },
+  "devDependencies": {
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.4.1"
   }
 }
