--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "babel": "5.8.23",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
-    "connect-assets": "^5.0.1",
+    "css-loader": "^0.19.0",
     "express": "4.13.3",
     "jade": "1.11.0",
     "node-jsx": "0.13.3",
@@ -14,13 +14,17 @@
     "node-sass-middleware": "^0.9.6",
     "nodemon": "1.7.0",
     "react": "0.13.3",
-    "react-router-component": "^0.26.1"
+    "react-async": "^2.1.0",
+    "react-router-component": "^0.26.1",
+    "sass-loader": "^3.0.0",
+    "style-loader": "^0.12.4"
   },
   "scripts": {
     "babel-node": "babel-node --stage 0",
     "start": "nodemon --exec npm run babel-node -- server.js"
   },
   "devDependencies": {
+    "extract-text-webpack-plugin": "^0.8.2",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.4.1"
