--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "dependencies": {
     "babel": "5.8.23",
     "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
-    "css-loader": "^0.19.0",
     "express": "4.13.3",
     "jade": "1.11.0",
-    "node-jsx": "0.13.3",
-    "node-sass": "^3.3.3",
-    "node-sass-middleware": "^0.9.6",
-    "nodemon": "1.7.0",
     "react": "0.13.3",
     "react-async": "^2.1.0",
-    "react-router-component": "^0.26.1",
-    "sass-loader": "^3.0.0",
-    "style-loader": "^0.12.4"
+    "react-router-component": "^0.26.1"
   },
   "scripts": {
     "babel-node": "babel-node --stage 0",
-    "start": "nodemon --exec npm run babel-node -- server.js"
+    "start": "babel-node server.js"
   },
   "devDependencies": {
-    "extract-text-webpack-plugin": "^0.8.2",
+    "babel-loader": "^5.3.2",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.4.1"
+    "webpack-hot-middleware": "^2.4.1",
+    "node-jsx": "0.13.3",
+    "node-sass": "^3.3.3",
+    "node-sass-middleware": "^0.9.6",
+    "style-loader": "^0.12.4",
+    "css-loader": "^0.19.0",
+    "sass-loader": "^3.0.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "react-hot-loader": "^1.3.0"
   }
 }
