--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "babel-node": "babel-node --stage 0",
     "start": "babel-node server.js",
-    "build": "rimraf dist && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
+    "build": "rimraf dist && NODE_ENV=production webpack --config ./webpack/production.config.js --progress --profile --colors",
+    "production": "NODE_ENV=production npm start"
   },
   "devDependencies": {
     "babel-loader": "^5.3.2",
